--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,24 @@
-AbstractUserDetailsAuthenticationProvider.badCredentials=IDまはたパスワードが誤っています。
-todo.login.logouted=ログアウトに成功しました。
+AbstractUserDetailsAuthenticationProvider.badCredentials=\u30E6\u30FC\u30B6\u540D\u3068\u30D1\u30B9\u30EF\u30FC\u30C9\u306E\u7D44\u307F\u5408\u308F\u305B\u304C\u4E0D\u6B63\u3067\u3059\u3002
+todo.login.logouted=\u30ED\u30B0\u30A2\u30A6\u30C8\u3057\u307E\u3057\u305F\u3002
+
+# employeeModel
+# \u793E\u54E1\u756A\u53F7
+employeeModel.id=\u793E\u54E1\u756A\u53F7
+Pattern.employeeModel.id={0}\u3092\u534A\u89D2\u6570\u5B57\uFF17\u6841\u3067\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
+# \u6C0F\u540D
+employeeModel.name=\u6C0F\u540D
+NotBlank.employeeModel.name={0}\u3092\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
+# \u751F\u5E74\u6708\u65E5
+employeeModel.birthdate=\u751F\u5E74\u6708\u65E5
+Pattern.employeeModel.birthdate={0}\u3092\u534A\u89D2\u6570\u5B57\uFF18\u6841\u3067\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
+
+# updateForm
+# \u793E\u54E1\u756A\u53F7
+updateForm.id=\u793E\u54E1\u756A\u53F7
+Pattern.updateForm.id={0}\u3092\u534A\u89D2\u6570\u5B57\uFF17\u6841\u3067\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
+# \u6C0F\u540D
+updateForm.name=\u6C0F\u540D
+NotBlank.updateForm.name={0}\u3092\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
+# \u751F\u5E74\u6708\u65E5
+updateForm.birthdate=\u751F\u5E74\u6708\u65E5
+Pattern.updateForm.birthdate={0}\u3092\u534A\u89D2\u6570\u5B57\uFF18\u6841\u3067\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
