--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,11 +14,11 @@ Pattern.employeeModel.birthdate={0}\u3092\u534A\u89D2\u6570\u5B57\uFF18\u6841\u3
 
 # updateForm
 # \u793E\u54E1\u756A\u53F7
-updateForm.id=\u793E\u54E1\u756A\u53F7
-Pattern.updateForm.id={0}\u3092\u534A\u89D2\u6570\u5B57\uFF17\u6841\u3067\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
+updateForms[1].id=\u793E\u54E1\u756A\u53F7
+Pattern.updateForms.id={0}\u3092\u534A\u89D2\u6570\u5B57\uFF17\u6841\u3067\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
 # \u6C0F\u540D
-updateForm.name=\u6C0F\u540D
-NotBlank.updateForm.name={0}\u3092\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
+updateForms[1].name=\u6C0F\u540D
+NotBlank.updateForms.name={0}\u3092\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
 # \u751F\u5E74\u6708\u65E5
-updateForm.birthdate=\u751F\u5E74\u6708\u65E5
-Pattern.updateForm.birthdate={0}\u3092\u534A\u89D2\u6570\u5B57\uFF18\u6841\u3067\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
+updateForms[1].birthdate=\u751F\u5E74\u6708\u65E5
+Pattern.updateForms.birthdate={0}\u3092\u534A\u89D2\u6570\u5B57\uFF18\u6841\u3067\u5165\u529B\u3057\u3066\u4E0B\u3055\u3044\u3002
